# bookoala

./: .env.example  README.md  main.py  pyproject.toml
agents/: bookoala.py
models/: ollama_models.py
tools/: books.py
